apps/next/umami/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: umami-http
spec:
  hostnames:
    - webb-next.harrytang.xyz
