apps/next/umami/https-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: umami-https
spec:
  hostnames:
    - webb-next.harrytang.xyz
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: next.harrytang.xyz
            statusCode: 302
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: umami
          namespace: umami
          port: 3000
